# cpp_library_template

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  conanfile.py
.ci-files/: install_cmake.sh  install_cmake_3.13.sh  install_conan.sh  run.sh  run_conan_server.sh
.ci-files/conan_server/: server.conf
cmake/: coverage.cmake  cppcheck.cmake  functions.cmake  warnings.cmake
include/foo/bar/: bar.h  bar.hpp
include/foo/cat/: cat.h  cat.hpp
include/foo/dog/: dog.h
src/: CREATING_NEW_SUB_LIBRARIES.md
src/bar/: CMakeLists.txt  bar.cpp
src/cat/: CMakeLists.txt  cat.cpp
src/dog/: CMakeLists.txt  dog.cpp
test/: CMakeLists.txt  unit-foo.bar.cpp  unit-foo.cat.cpp
test_cmake_install/: CMakeLists.txt  README.md  test-bar.cpp  test-cat.cpp
test_cmake_install/cmake/: CMakeLists.txt  conanfile.txt
test_cmake_install/conan_cmake_find_package_generator/: CMakeLists.txt  conanfile.txt
test_cmake_install/conan_cmake_generator/: CMakeLists.txt  conanfile.txt
test_cmake_install/conan_cmake_paths_generator/: CMakeLists.txt  conanfile.txt
